# naive_cnn

./: CMakeLists.txt  README.md
examples/mnist/: test.cpp  train.cpp
naive_cnn/: config.h  naive_cnn.h  network.h
naive_cnn/activations/: activation_functions.h
naive_cnn/layers/: average_pooling_layer.h
naive_cnn/loss_functions/: loss_functions.h
naive_cnn/optimizers/: optimizers.h
naive_cnn/util/: aligned_allocator.h  conv_kernel.h  deform.h  nn_error.h  product.h
